Added a TRACEBASE param to the main makefile for being able to have trace directories arbitrarily by passing a param to make. M.trace now only copies in update mode.

--- a/traces/Makefile
+++ b/traces/Makefile
@@ -1,7 +1,8 @@
 # For creating version dependent folders for each neuroidnet instance
 
 SHELL=bash
-DATETIME=$(shell date +%Y-%m-%d_%T)
+DATETIME:=$(shell date +%Y-%m-%d_%T)
+TRACEBASE:=$(shell pwd)
 TRACEDIR:=trace_$(DATETIME)
 JAVARUN=$(HOME)/classes
 
