compile instructions, src package task in build.xml, and additions to TODO file

--- a/build.xml
+++ b/build.xml
@@ -6,16 +6,21 @@
 <property name="build-dir" location="classes"/>
 <property name="user-class-dir" location="${user.home}/classes"/>
 
-<target name="build">
+<target name="build" description="compiles Neuroidnet">
 <javac srcdir="${src-dir}"
        destdir="${build-dir}"
        includes="neuroidnet/**,neuroidnet/remote/AreaInt.java"
        excludes="neuroidnet/router/**,neuroidnet/simple/**,neuroidnet/remote/**,neuroidnet/Guinea.java"/> <!-- neuroidnet/ntr/MembranePotentialPlot.java -->
 </target>
 
-<target name="dist" depends="build">
+<target name="dist" depends="build" description="creates JAR files with compiled classes">
 <jar jarfile="${ant.project.name}.jar" basedir="classes"/>
 <copy file="${ant.project.name}.jar" todir="${user-class-dir}"/>
+</target>
+
+<target name="srcdist" depends="build" description="creates JAR files with source and compiled classes">
+<jar jarfile="${ant.project.name}-src.jar" basedir="." 
+     excludes="traces/**,classes/**,**/CVS/**" />
 </target>
 
 </project>
